@@ -3,7 +3,6 @@ package io.quarkus.deployment.dev;
 import static java.util.Arrays.asList;
 import static java.util.Collections.singletonList;
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
 
 import java.io.ByteArrayInputStream;
 import java.io.Closeable;
@@ -54,9 +53,9 @@ import org.jboss.jandex.IndexView;
 import org.jboss.jandex.Indexer;
 import org.jboss.logging.Logger;
 
-import io.quarkus.bootstrap.model.PathsCollection;
 import io.quarkus.bootstrap.runner.Timing;
 import io.quarkus.changeagent.ClassChangeAgent;
+import io.quarkus.deployment.dev.DevModeContext.ModuleInfo;
 import io.quarkus.deployment.dev.filewatch.FileChangeCallback;
 import io.quarkus.deployment.dev.filewatch.FileChangeEvent;
 import io.quarkus.deployment.dev.filewatch.WatchServiceFileSystemWatcher;
@@ -69,6 +68,8 @@ import io.quarkus.dev.spi.DevModeType;
 import io.quarkus.dev.spi.HotReplacementContext;
 import io.quarkus.dev.spi.HotReplacementSetup;
 import io.quarkus.dev.testing.TestScanningLock;
+import io.quarkus.paths.PathCollection;
+import io.quarkus.paths.PathList;
 
 public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable {
     public static final boolean IS_LINUX = System.getProperty("os.name").toLowerCase(Locale.ENGLISH).contains("linux");
@@ -189,8 +190,13 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
 
     @Override
     public List<Path> getSourcesDir() {
-        return context.getAllModules().stream().flatMap(m -> m.getMain().getSourcePaths().toList().stream())
-                .collect(toList());
+        final List<Path> paths = new ArrayList<>();
+        for (ModuleInfo m : context.getAllModules()) {
+            for (Path p : m.getMain().getSourcePaths()) {
+                paths.add(p);
+            }
+        }
+        return paths;
     }
 
     private void startTestScanningTimer() {
@@ -841,12 +847,12 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
             final Set<Path> moduleResources = correspondingResources.computeIfAbsent(compilationUnit,
                     m -> Collections.newSetFromMap(new ConcurrentHashMap<>()));
             boolean doCopy = true;
-            PathsCollection rootPaths = compilationUnit.getResourcePaths();
+            PathCollection rootPaths = compilationUnit.getResourcePaths();
             String outputPath = compilationUnit.getResourcesOutputPath();
             if (rootPaths.isEmpty()) {
                 String rootPath = compilationUnit.getClassesPath();
                 if (rootPath != null) {
-                    rootPaths = PathsCollection.of(Paths.get(rootPath));
+                    rootPaths = PathList.of(Paths.get(rootPath));
                 }
                 outputPath = rootPath;
                 doCopy = false;
@@ -854,7 +860,7 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
             if (rootPaths.isEmpty() || outputPath == null) {
                 continue;
             }
-            final List<Path> roots = rootPaths.toList().stream()
+            final List<Path> roots = rootPaths.stream()
                     .filter(Files::exists)
                     .filter(Files::isReadable)
                     .collect(Collectors.toList());
@@ -1077,13 +1083,13 @@ public class RuntimeUpdatesProcessor implements HotReplacementContext, Closeable
         for (DevModeContext.ModuleInfo module : context.getAllModules()) {
             List<DevModeContext.CompilationUnit> compilationUnits = cuf.apply(module);
             for (DevModeContext.CompilationUnit unit : compilationUnits) {
-                PathsCollection rootPaths = unit.getResourcePaths();
+                PathCollection rootPaths = unit.getResourcePaths();
                 if (rootPaths.isEmpty()) {
                     String rootPath = unit.getClassesPath();
                     if (rootPath == null) {
                         continue;
                     }
-                    rootPaths = PathsCollection.of(Paths.get(rootPath));
+                    rootPaths = PathList.of(Path.of(rootPath));
                 }
                 for (Path root : rootPaths) {
                     for (String path : watchedFilePaths.keySet()) {
